--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<spring.maven.artifact.version>3.2.13.RELEASE</spring.maven.artifact.version>
 		<egovframework.rte.version>3.1.0</egovframework.rte.version>
 	</properties>
- 
+
 	<repositories>
 		<repository>
 			<id>mvn2</id>
@@ -94,6 +94,18 @@
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.13.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.185</version>
 		</dependency>
 	</dependencies>
 	<build>
