--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
 			<artifactId>h2</artifactId>
 			<version>1.4.185</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>dev4world</finalName>
