--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.maven.artifact.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.maven.artifact.version}</version>
 		</dependency>
@@ -133,24 +139,42 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.5.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
-    <dependency>
-    	<groupId>com.setvect</groupId>
-    	<artifactId>setvect</artifactId>
-    	<version>1.0</version>
-    	<scope>system</scope>
-    	<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/setvect.jar</systemPath>
-    </dependency>
+		<dependency>
+			<groupId>com.setvect</groupId>
+			<artifactId>setvect</artifactId>
+			<version>1.0</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/setvect.jar</systemPath>
+		</dependency>
 
 	</dependencies>
 	<build>
 		<finalName>dev4world</finalName>
-		
+
 		<pluginManagement>
 			<plugins>
 				<plugin>
