--- a/pom.xml
+++ b/pom.xml
@@ -137,11 +137,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.2.11.Final</version>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.3.1</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
 		</dependency>
 
 		<dependency>
