--- a/src/main/resources/config/config_hb_h2.properties
+++ b/src/main/resources/config/config_hb_h2.properties
@@ -11,4 +11,15 @@
 
 # DB\uc11c\ubc84 \ud0c0\uc785(h2,mysql,mongodb) - datasource \ubc0f sqlMap \ud30c\uc77c \uc9c0\uc815\uc5d0 \uc0ac\uc6a9\ub428
 
+com.dev4world.ctmemo.db.type=h2
+com.dev4world.ctmemo.db.user=dev4word_user
+com.dev4world.ctmemo.db.password=dev4word_pass
+
+#Hibernate
+com.dev4world.ctmemo.db.hbm2ddl=create
+com.dev4world.ctmemo.db.dialect=org.hibernate.dialect.H2Dialect
+
+#H2
+com.dev4world.ctmemo.db.driver=org.h2.Driver
+com.dev4world.ctmemo.db.url=jdbc:h2:tcp://localhost:9092/C:/Users/Administrator/git/Dev4World/db/dev4word_db
 
