--- a/src/main/resources/config/config_mybatis_h2.properties
+++ b/src/main/resources/config/config_mybatis_h2.properties
@@ -14,11 +14,7 @@
 com.dev4world.ctmemo.db.user=dev4word_user
 com.dev4world.ctmemo.db.password=dev4word_pass
 
-#Hibernate
-com.dev4world.ctmemo.db.hbm2ddl=create
-com.dev4world.ctmemo.db.dialect=org.hibernate.dialect.MySQLDialect
-
 #H2
-com.dev4world.ctmemo.db.driver=com.mysql.jdbc.Driver
-com.dev4world.ctmemo.db.url=jdbc:mysql://localhost/dev4word_db
+com.dev4world.ctmemo.db.driver=org.h2.Driver
+com.dev4world.ctmemo.db.url=jdbc:h2:tcp://localhost:9092/~/dev4world/git/Dev4World/db/dev4word_db
 
