--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath*:/spring/context-common.xml,classpath*:/spring/context-hibernate.xml</param-value>
+		<param-value>classpath:/spring/context-common.xml,classpath:/spring/context-hibernate.xml</param-value>
 	</context-param>
 
 	<listener>
