--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,12 @@
 			<version>3.2.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>dev4world</finalName>
